<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvMod1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="16dp"
        android:text="@string/web" />

    <TextView
        android:id="@+id/tvMod2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="left"
        android:text="@string/software" />

    <TextView
        android:id="@+id/tvMod3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="left"
        android:text="@string/uiux" />

    <TextView
        android:id="@+id/tvMod4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="left"
        android:text="@string/itsecurity" />

    <TextView
        android:id="@+id/tvMod5"
        android:layout_width="wrap_content"
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/mobile" />

</LinearLayout>